# detestable-me

./: Cargo.toml  rustfmt.toml
src/: cipher.rs  gadget.rs  lib.rs  main.rs  sidekick.rs  supervillain.rs  test_common.rs
