[package]
name = "detestable-me"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "time", "rt"] }

[dev-dependencies]
test-context = "0.5.4"

[[bin]]
name = "detestable-me"
path = "src/main.rs"
test = false

[lib]
name = "evil"
path = "src/lib.rs"
